--- a/package.json
+++ b/package.json
@@ -27,10 +27,9 @@
   "devDependencies": {
     "live-server": "^1.2.1",
     "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "@arcgis/core": "^4.21.2"
+    "webpack-cli": "^4.9.1"
   },
-  "peerDependencies": {
-    "@arcgis/core": "4.x"
+  "dependencies": {
+    "ellipsis-js-util": "file:../ellipsis-js-util"
   }
 }
