--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mapboxgljs-ellipsis",
-  "version": "3.1.2",
+  "version": "3.1.3",
   "description": "Use Ellipsis Drive layers in mapboxgl.js projects.",
   "private": false,
   "keywords": [
@@ -26,7 +26,8 @@
   "devDependencies": {
     "live-server": "^1.2.1",
     "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "ellipsis-js-util": "file:../ellipsis-js-util"
   },
   "dependencies": {
     "ellipsis-js-util": "^1.1.0"
